# Experiment-GCS-BigQuery-Storage-Read

./: .gitignore  CMakeLists.txt  README.md
app/: test_download.cpp
cmake/: fetch_extern.cmake
